--- a/src/test/relatórios/css/highlight-idea.css
+++ b/src/test/relatórios/css/highlight-idea.css
@@ -21,7 +21,8 @@ Intellij Idea-like styling (c) Vasily Polovnyov <vast@whiteants.net>
 */
 
 pre code {
-  display: block; padding: 0.5em;
+  display: block;
+  padding: 0.5em;
   color: #000;
   background: #fff;
 }
@@ -29,7 +30,7 @@ pre code {
 pre .subst,
 pre .title {
   font-weight: normal;
-  color: #000;
+  color: #f8f8f2;
 }
 
 pre .comment,
@@ -89,7 +90,7 @@ pre .tex .command,
 pre .request,
 pre .status {
   font-weight: bold;
-  color: #000080;
+  color: #8be9fd;
 }
 
 pre .attribute,
@@ -137,7 +138,7 @@ pre .variable,
 pre .envvar,
 pre .apache .sqbracket,
 pre .nginx .built_in {
-  color: #660e7a;
+  color: #e37bfa;
 }
 
 pre .addition {
